Added Actuator