@@ -22,15 +22,17 @@ public class SecurityConfig {
     private final JwtAuthenticationConverter jwtAuthenticationConverter;
     private final JwtAuthenticationManager jwtAuthenticationManager;
 
-    public SecurityConfig(JwtAuthenticationConverter jwtAuthenticationConverter, 
-                         JwtAuthenticationManager jwtAuthenticationManager) {
+    public SecurityConfig(JwtAuthenticationConverter jwtAuthenticationConverter,
+                          JwtAuthenticationManager jwtAuthenticationManager) {
         this.jwtAuthenticationConverter = jwtAuthenticationConverter;
         this.jwtAuthenticationManager = jwtAuthenticationManager;
     }
 
     @Bean
     public SecurityWebFilterChain securityWebFilterChain(ServerHttpSecurity http) {
-        AuthenticationWebFilter authenticationWebFilter = new AuthenticationWebFilter(jwtAuthenticationManager);
+
+        AuthenticationWebFilter authenticationWebFilter =
+                new AuthenticationWebFilter(jwtAuthenticationManager);
         authenticationWebFilter.setServerAuthenticationConverter(jwtAuthenticationConverter);
 
         return http
@@ -39,28 +41,46 @@ public class SecurityConfig {
                 .httpBasic(ServerHttpSecurity.HttpBasicSpec::disable)
                 .formLogin(ServerHttpSecurity.FormLoginSpec::disable)
                 .logout(ServerHttpSecurity.LogoutSpec::disable)
+
+                // 🔑 Custom JWT authentication filter
                 .addFilterAt(authenticationWebFilter, SecurityWebFiltersOrder.AUTHENTICATION)
-                .exceptionHandling(exceptions -> 
-                    exceptions.authenticationEntryPoint((exchange, ex) -> {
-                        exchange.getResponse().setStatusCode(org.springframework.http.HttpStatus.UNAUTHORIZED);
-                        return exchange.getResponse().setComplete();
-                    })
+
+                .exceptionHandling(exceptions ->
+                        exceptions.authenticationEntryPoint((exchange, ex) -> {
+                            exchange.getResponse()
+                                    .setStatusCode(org.springframework.http.HttpStatus.UNAUTHORIZED);
+                            return exchange.getResponse().setComplete();
+                        })
                 )
+
                 .authorizeExchange(exchanges -> exchanges
+                        // ✅ Allow preflight
                         .pathMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+
+                        // ✅ Allow actuator for infra / Nginx / monitoring
+                        .pathMatchers("/actuator/health", "/actuator/info").permitAll()
+
+                        // ✅ Allow auth & jwks
                         .pathMatchers("/api/v1/auth/**").permitAll()
                         .pathMatchers("/.well-known/jwks.json").permitAll()
+
+                        // 🔒 Everything else secured
                         .anyExchange().authenticated()
                 )
+
                 .build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of("http://localhost:3000", "http://localhost:*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedOriginPatterns(
+                List.of("http://localhost:3000", "http://localhost:*")
+        );
+        configuration.setAllowedMethods(
+                Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH")
+        );
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
         configuration.setExposedHeaders(Arrays.asList(
                 "Authorization",
@@ -69,8 +89,9 @@ public class SecurityConfig {
                 "X-Correlation-Id"
         ));
         configuration.setMaxAge(3600L);
-        
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+
+        UrlBasedCorsConfigurationSource source =
+                new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
